# Hindsight-Recall

./: .coveragerc  .eslintrc.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  hindsight_to-do.csv  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
capture/: __init__.py  active_window.py  cli.py  encryption.py  keymgr.py  logging_config.py  ocr.py  screenshot.py  service.py  supervisor.py
config/: default.yaml
data/: prefs.json
docs/: architecture.md
frontend/: README.md  authManager.js  index.html  logging.js  main.js  preload.js
scripts/: build_main_todo_workbook.py  spdx_header_hook.py
search/: __init__.py  hybrid.py  indexer.py  rerank.py  semantic.py
tests/: .coveragerc  conftest.py  test_active_window.py  test_active_window_extra.py  test_capture.py  test_capture_once_paths.py  test_cli_args.py  test_cli_extra.py  test_cli_lock_pid.py  test_encryption_and_ocr_extra.py  test_encryption_fileops.py  test_hybrid.py  test_ipc_key.py  test_keymgr.py  test_keymgr_autostart.py  test_keymgr_lockout.py  test_lock_detection.py  test_screenshot_extra.py  test_semantic.py  test_service_behavior.py  test_service_lock_detection.py  test_supervisor_extra.py  test_timezone_filename.py
tests/auto-test-reports/: download_latest_ci_artifact.py  parse_junit_and_coverage.py
tests/auto-test-reports/test-results_2025-09-01_19-46-00/: coverage.xml
tests/auto-test-reports/test-results_2025-09-01_19-46-00/reports/: junit.xml
to-do/: hindsight_to-do.csv  security-to-do.csv
