[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hindsight-recall"
version = "0.0.1"
description = "Personal encrypted activity memory (scaffold)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-only"}
authors = [{name = "Unknown"}]
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","B","UP","N","D"]
ignore = ["D100","D104","D401"]

[tool.ruff.per-file-ignores]
"search/semantic.py" = ["D103"]

[tool.yapf]
based_on_style = "google"
column_limit = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
